--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "nodemon": "^3.1.4",
     "ws": "^8.18.0"
   }
 }
